--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
+    "npx": "^10.2.2",
     "nuxt": "^2.11.0"
   },
   "devDependencies": {}
