--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
-    "npx": "^10.2.2",
-    "nuxt": "^2.12.2",
+    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.3.6",
     "veu": "^1.0.1"
   },
   "devDependencies": {}
