--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.10.3",
+    "axios": "^0.19.2",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
+    "cors": "^2.8.5",
     "nuxt": "^2.0.0",
-    "@nuxtjs/axios": "^5.3.6",
     "veu": "^1.0.1"
   },
   "devDependencies": {}
