--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.10.3",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "npx": "^10.2.2",
