--- a/Backend/api/package.json
+++ b/Backend/api/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nodemailer": "^6.4.6",
     "pg": "^8.0.3"
   },
   "devDependencies": {},
