--- a/Backend/api/package.json
+++ b/Backend/api/package.json
@@ -7,8 +7,11 @@
     "test": "test"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "handlebars": "^4.7.6",
     "nodemailer": "^6.4.6",
     "pg": "^8.0.3"
   },
