--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,9 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "cors": "^2.8.5",
+    "fs": "0.0.1-security",
+    "handlebars": "^4.7.6",
+    "nodemailer": "^6.4.6",
     "nuxt": "^2.0.0",
     "veu": "^1.0.1",
     "vue-input-facade": "^1.1.5"
