--- a/Backend/api/package.json
+++ b/Backend/api/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "handlebars": "^4.7.6",
