--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "fs": "0.0.1-security",
     "handlebars": "^4.7.6",
     "nodemailer": "^6.4.6",
