--- a/Backend/api/package.json
+++ b/Backend/api/package.json
@@ -13,11 +13,13 @@
     "fs": "0.0.1-security",
     "handlebars": "^4.7.6",
     "nodemailer": "^6.4.6",
-    "pg": "^8.0.3"
+    "pg": "^8.0.3",
+    "vue-cookies": "^1.7.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "EstivenCano",
   "license": "ISC"
