--- a/Backend/api/package.json
+++ b/Backend/api/package.json
@@ -15,8 +15,7 @@
     "handlebars": "^4.7.6",
     "nodemailer": "^6.4.6",
     "pg": "^8.0.3",
-    "vue-cookies": "^1.7.0",
-    "vue-simple-alert": "^1.1.1"
+    "vue-cookies": "^1.7.0"
   },
   "devDependencies": {},
   "scripts": {
