--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,10 @@
 {
   "name": "proyecto_web",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.16.x",
+    "npm": "6.x"
+  },
   "description": "Proyecto desarrollo web/software",
   "author": "EstivenCano",
   "private": true,
@@ -20,10 +24,10 @@
     "handlebars": "^4.7.6",
     "nodemailer": "^6.4.6",
     "nuxt": "^2.0.0",
+    "nuxt-sweetalert2": "^1.0.0",
     "veu": "^1.0.1",
     "vue-cookies": "^1.7.0",
-    "vue-input-facade": "^1.1.5",
-    "vue-simple-alert": "^1.1.1"
+    "vue-input-facade": "^1.1.5"
   },
   "devDependencies": {}
 }
